# IPC-Inspector

./: README.md  ipc_inspector  main.cpp
core/: deadlock_detector.cpp  deadlock_detector.h  ipc_performance.cpp  logger.cpp  mainwindow.h  performance_timer.cpp  process_manager.cpp
include/: deadlock_detector.h  ipc_performance.h  logger.h  mq_debugger.h  performance_timer.h  pipe_debugger.h  process_manager.h  shm_debugger.h
ipc/: mq_debugger.cpp  pipe_debugger.cpp  shm_debugger.cpp
ipc_inspector_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
